TestSuite/errors/err0273.pas
type TClass = static class
class j: integer;
property p: integer read j write j;
end;

begin
  
end.